# undercover

./: README.md  checksum-Elixir.ExFingerprint.Nif.exs  checksum-Elixir.ExUndercover.Nif.exs  mix.exs
.github/workflows/: ci.yml  release.yml
config/: config.exs
docs/: ARCHITECTURE.md
lib/: ex_undercover.ex
lib/ex_fingerprint/: nif.ex
lib/ex_undercover/: anti_bot.ex  application.ex  browser_profile.ex  client.ex  cookie_jar.ex  debug.ex  nif.ex  profile.ex  profile_registry.ex  proton.ex  request.ex  response.ex  rotator.ex  runtime.ex  solver.ex  transport.ex
lib/ex_undercover/capture/: client_hello.ex
lib/ex_undercover/profile/: chrome_147.ex  store.ex
lib/ex_undercover/solver/: chrome.ex  registry.ex
lib/ex_undercover/transport/: profile_sync.ex  trust_store.ex
native/ex_undercover_nif/: Cargo.toml
native/ex_undercover_nif/src/: error.rs  lib.rs  profile.rs  request.rs  response.rs  transport.rs
native/ex_undercover_nif/src/profile/: chrome_147.rs
native/ex_undercover_nif/src/transport/: emulation.rs  plan.rs  stub.rs
test/: ex_undercover_test.exs
test/ex_undercover/: anti_bot_test.exs  browser_profile_test.exs  client_response_builder_test.exs  client_test.exs  cookie_jar_test.exs  debug_test.exs  profile_fallback_test.exs  profile_registry_test.exs  profile_test.exs  proton_test.exs  request_integration_test.exs  request_test.exs  rotator_default_test.exs  rotator_test.exs  solver_registry_test.exs  solver_test.exs  wire_guard_test.exs
test/support/: counting_solver.ex  http_server.ex  test_solver.ex
(+18 files in other folders)
