[package]
name = "ex_undercover_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "ex_undercover_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
http = "1"
brotli = "8"
rustler = { version = "0.37", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "net", "rt", "time"] }
thiserror = "1"
wreq = { git = "https://github.com/onnimonni/rquest.git", package = "wreq", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "zstd"] }
